--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body {
   padding: 25px;
 }
 
-#icon {
+/* #icon {
   grid-column: 5 / 6;
   grid-row: 1;
   margin: 5px;
@@ -69,4 +69,4 @@ body {
   margin-top: auto;
   margin-bottom: auto;
   padding-left: 10px;
-}
+} */
