--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 #main-content2 {
   grid-column: 2 / 5;
   grid-row: 2;
-  text-align: center;
+  text-align: right;
   font-family: Raleway Light;
   padding-bottom: 25px;
 }
@@ -40,6 +40,7 @@ body {
 #main-content3 {
   grid-column: 3 / 4;
   grid-row: 3;
+  text-align: center;
 }
 
 #main-content4 {
